# aikt-extraction

./: .gitignore  README.md
cpu/: .gitignore  Dockerfile  __init__.py  deploy.ps1  main.py  pyproject.toml
gpu/: .dockerignore  Dockerfile  __init__.py  deploy.sh  docker-entrypoint.sh  main.py  pyproject.toml
tests/: .gitignore  tests.py
