[project]
name = "docling-extraction-gpu"
version = "0.1.0"
description = "Docling PDF extraction API (GPU)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "torch>=2.3.0,<2.8",
  "docling[easyocr]",
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
]

[tool.uv]
package = false
# WSL: venv under /mnt/c/ often breaks (pybidi, torchrun, …). Use ./wsl-sync.sh or:
#   UV_PROJECT_ENVIRONMENT=$HOME/.venvs/docling-extraction-gpu UV_LINK_MODE=copy uv sync
link-mode = "copy"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
